--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
             src="./images/e-learn-high-resolution-logo-black.png" alt="" width="200" height="200">
         <div class="px-4 pt-5 text-center">
             <span>
-                <h1 class="display-4 fw-bold">E-Learn</h1>
+                <h1 class="display-4 fw-bold">Nikhil Singh</h1>
                 <h3>Knowledge Limitless!..</h3>
             </span>
             <div class="col-lg-6 mx-auto">
@@ -110,8 +110,8 @@
             </div>
         </div>
     </div>
-<!-- 
-    <div class="p-5 text-white bg-secondary rounded-3">
+
+    <!-- <div class="p-5 text-white bg-secondary rounded-3">
         <div class="container">
             <h1 class="display-5 fw-bold pb-3 border-bottom">Our Vision</h1>
             <div class="container my-3 pt-5 py-5">
