--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         <div class="container-fluid">
             <img class="d-block mx-2 my-1 rounded-circle"
                 src="./images/e-learn-high-resolution-logo-black.png" alt="Logo" width="50" height="50">
-            <a class="navbar-brand" href="./index">Nikhil Singh</a>
+            <a class="navbar-brand" href="./index.html">Nikhil Singh</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarScroll">
                 <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                     <li class="nav-item">
-                        <a class="nav-link" href="./index">Home</a>
+                        <a class="nav-link" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./about.html">About</a>
@@ -56,9 +56,6 @@
         <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5 pt-5 text-bg-light rounded-3">
             <div class="d-flex flex-column align-items-start gap-2">
                 <h2 class="text-bg-light">There are the Basic and Profesional Social Media Handels/Contacts</h2>
-                <!-- <p class="text-muted text-center">
-                    Contact Me Through Following Mediums!...
-                </p> -->
             </div>
             <div class="row row-cols-1 row-cols-sm-2 g-4">
                 <div class="d-flex flex-column gap-2">
