--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@
         </div>
     </nav>
 
+    <div class="m-0 p-0 bg-light rounded-3" style="background-color: rgb(217, 241, 255);">
+        <div id="carouselExampleSlidesOnly" class="carousel slide mb-4" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./images/BooksImage.jpg" style="width: 1900px; height: 600px;"
+                        class="d-block w-100" alt="Img">
+                </div>
+                <div class="carousel-caption d-none d-md-block">
+                    <h1 class="display-3 bg-dark text-center text-light">Nikhil Singh<br><span>Django | RESTful API | Flask | Python</span>
+                    </h1>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Social Navigation Ends -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
