--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,10 @@
 
     <!--Social Navigation Start-->
 
-    <nav id="myNavbar" class="navbar navbar-expand-lg navbar-dark bg-dark text-white fw-bold mb">
+    <nav id="myNavbar" class="navbar navbar-expand-lg navbar-dark bg-dark text-white fw-bold mb-5 fixed-top">
         <div class="container-fluid">
-            <img class="d-block mx-2 my-1 rounded-circle"
-                src="./images/e-learn-high-resolution-logo-black.png" alt="Logo" width="50" height="50">
+            <img class="d-block mx-2 my-1 rounded-circle" src="./images/e-learn-high-resolution-logo-black.png"
+                alt="Logo" width="50" height="50">
             <a class="navbar-brand" href="./index.html">Nikhil Singh</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,10 +46,10 @@
         </div>
     </nav>
 
-    <!-- Social Navigation Ends -->
+    <!-- Social Navigation End -->
 
-    <div class="container px-4 my-5">
-        <h1 class="pb-3 border-bottom fw-bold">Contact Me!</h1>
+    <div class="container px-4 my-5 py-3">
+        <h1 class="pb-3 border-bottom fw-bold my-5">Contact Me!</h1>
     </div>
     
     <div class="container px-4 text-center" style="background-color: rgb(217, 241, 255);">
