--- a/projects.html
+++ b/projects.html
@@ -18,10 +18,10 @@
 
     <!--Social Navigation Start-->
 
-    <nav id="myNavbar" class="navbar navbar-expand-lg navbar-dark bg-dark text-white fw-bold mb">
+    <nav id="myNavbar" class="navbar navbar-expand-lg navbar-dark bg-dark text-white fw-bold mb fixed-top">
         <div class="container-fluid">
-            <img class="d-block mx-2 my-1 rounded-circle"
-                src="./images/e-learn-high-resolution-logo-black.png" alt="Logo" width="50" height="50">
+            <img class="d-block mx-2 my-1 rounded-circle" src="./images/e-learn-high-resolution-logo-black.png"
+                alt="Logo" width="50" height="50">
             <a class="navbar-brand" href="./index.html">Nikhil Singh</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +46,7 @@
         </div>
     </nav>
 
-    <!-- Social Navigation Ends -->
+    <!-- Social Navigation End -->
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
