--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 
     <!--Social Navigation Start-->
 
-    <nav id="myNavbar" class="navbar navbar-expand-lg navbar-dark bg-dark text-white fw-bold mb">
+    <nav id="myNavbar" class="navbar navbar-expand-lg navbar-dark bg-dark text-white fw-bold mb fixed-top">
         <div class="container-fluid">
             <img class="d-block mx-2 my-1 rounded-circle" src="./images/e-learn-high-resolution-logo-black.png"
                 alt="Logo" width="50" height="50">
@@ -45,7 +45,7 @@
         </div>
     </nav>
 
-    <!-- Social Navigation Ends -->
+    <!-- Social Navigation End -->
 
     <div class="m-0 p-0 bg-light rounded-3" style="background-color: rgb(217, 241, 255);">
         <div id="carouselExampleSlidesOnly" class="carousel slide mb-4" data-bs-ride="carousel">
@@ -110,24 +110,6 @@
             </div>
         </div>
     </div>
-
-    <!-- <div class="p-5 text-white bg-secondary rounded-3">
-        <div class="container">
-            <h1 class="display-5 fw-bold pb-3 border-bottom">Our Vision</h1>
-            <div class="container my-3 pt-5 py-5">
-                </h2>
-                <p class="lead">
-                    🌟 <b>E-Learn</b>, where we envision a world where programming education is accessible to all! Our
-                    mission is to break down barriers and make learning programming languages as easy as pie for both
-                    tech wizards and newcomers alike. 💻 With our user-friendly platform, we strive to create a vibrant
-                    community where knowledge flows freely and collaboration thrives. 🚀 Join us on this exciting
-                    journey as we empower learners to unleash their potential and soar to new heights in the digital
-                    universe! 🌌 Let's code, connect, and conquer together! 🔥
-                </p>
-            </div>
-        </div>
-    </div> -->
-
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
