--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
     <!--Social Navigation Start-->
 
-    <nav id="myNavbar" class="navbar navbar-expand-lg navbar-dark bg-dark text-white fw-bold mb">
+    <nav id="myNavbar" class="navbar navbar-expand-lg navbar-dark bg-dark text-white fw-bold mb fixed-top">
         <div class="container-fluid">
-            <img class="d-block mx-2 my-1 rounded-circle"
-                src="./images/e-learn-high-resolution-logo-black.png" alt="Logo" width="50" height="50">
+            <img class="d-block mx-2 my-1 rounded-circle" src="./images/e-learn-high-resolution-logo-black.png"
+                alt="Logo" width="50" height="50">
             <a class="navbar-brand" href="./index.html">Nikhil Singh</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,17 +46,82 @@
         </div>
     </nav>
 
-    <div class="m-0 p-0 bg-light rounded-3" style="background-color: rgb(217, 241, 255);">
+    <!-- Social Navigation End -->
+
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="./images/Python.png" width="1440" height="800" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>First slide label</h5>
+                    <p>Some representative placeholder content for the first slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="./images/BooksImage.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Second slide label</h5>
+                    <p>Some representative placeholder content for the second slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="./images/BooksImage.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Some representative placeholder content for the third slide.</p>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
+    <!-- <div class="m-0 p-0 bg-light rounded-3" style="background-color: rgb(217, 241, 255);">
         <div id="carouselExampleSlidesOnly" class="carousel slide mb-4" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./images/BooksImage.jpg" style="width: 1900px; height: 600px;"
-                        class="d-block w-100" alt="Img">
+                    <img src="./images/BooksImage.jpg" style="width: 1900px; height: 600px;" class="d-block w-100"
+                        alt="Img">
                 </div>
                 <div class="carousel-caption d-none d-md-block">
-                    <h1 class="display-3 bg-dark text-center text-light">Nikhil Singh<br><span>Django | RESTful API | Flask | Python</span>
+                    <h1 class="display-3 bg-dark text-center text-light">Nikhil Singh<br><span>Django | RESTful API |
+                            Flask | Python</span>
                     </h1>
                 </div>
+            </div>
+        </div>
+    </div> -->
+
+
+    <div class="p-5 text-white bg-secondary rounded-3">
+        <div class="container">
+            <h1 class="display-5 fw-bold pb-3 border-bottom">Our Vision</h1>
+            <div class="container my-3 pt-5 py-5">
+                </h2>
+                <p class="lead">
+                    🌟 <b>E-Learn</b>, where we envision a world where programming education is accessible to all! Our
+                    mission is to break down barriers and make learning programming languages as easy as pie for both
+                    tech wizards and newcomers alike. 💻 With our user-friendly platform, we strive to create a vibrant
+                    community where knowledge flows freely and collaboration thrives. 🚀 Join us on this exciting
+                    journey as we empower learners to unleash their potential and soar to new heights in the digital
+                    universe! 🌌 Let's code, connect, and conquer together! 🔥
+                </p>
             </div>
         </div>
     </div>
