--- a/about.html
+++ b/about.html
@@ -37,9 +37,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./contact.html">Contact</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./projects.html">Profile</a>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -55,9 +52,7 @@
                         class="d-block w-100" alt="Img">
                 </div>
                 <div class="carousel-caption d-none d-md-block">
-                    <h1 class="display-3 bg-dark text-center text-light">E-Learn <br><span>Knowledge Limitless!..</span>
-                    </h1>
-                    {% comment %} <h3 class="display-3 bg-dark text-center text-light"></h3> {% endcomment %}
+                    <h1 class="display-3 bg-dark text-center text-light">E-Learn <br><span>Knowledge Limitless!..</span></h1>
                 </div>
             </div>
         </div>
