--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="p-2" style="background-color: rgb(217, 241, 255);">
 
         <div class="container px-4 py-5" id="custom-cards">
-            <h2 class="pb-2">Custom cards</h2>
+            <h2 class="pb-2">Full Stack Projects ( Django / Flask )</h2>
 
             <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
                 <div class="col">
@@ -118,7 +118,7 @@
                         <div class="d-flex flex-column h-100 p-5 pb-3 text-dark text-shadow-1">
                             <ul class="d-flex list-unstyled mt-auto">
                                 <li class="me-auto">
-                                    <small><a href="https://github.com/NikhilSingh2004/E-Learn" class="styled-link" target="_blank">Check Out</a></small>
+                                    <small><a href="https://github.com/NikhilSingh2004/E-Learn" class="styled-link" target="_blank">E-Learn</a></small>
                                 </li>
                                 <li class="d-flex align-items-center me-3">
                                 </li>
