--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <h2 class="pb-2">Full Stack Projects ( Django / Flask )</h2>
 
             <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
-                <div class="col">
+                <div class="col rounded-5">
                     <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
                         style="background-image: url('./images/e-learn-1.png');">
                         
