--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         .styled-link {
             text-decoration: none;
             color: inherit;
-            transition: all 0.3s ease-in-out; /* Add transition for smooth effect */
+            transition: all 0.3s ease-in-out;
         }
     
         .styled-link:hover {
             text-decoration: none;
             color: white;
-            background-color: #0d6efd; /* Bootstrap primary color */
+            background-color: #0d6efd;
             padding: 0.375rem 0.75rem;
             border-radius: 0.25rem;
         }
@@ -124,6 +124,7 @@
                                 </li>
                             </ul>
                         </div>
+
                     </div>
                 </div>
 
@@ -142,7 +143,7 @@
                                     <svg class="bi me-2" width="1em" height="1em">
                                         <use xlink:href="#geo-fill"></use>
                                     </svg>
-                                    <small>Pakistan</small>
+                                    <small>India</small>
                                 </li>
                                 <li class="d-flex align-items-center">
                                     <svg class="bi me-2" width="1em" height="1em">
